--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,14 +2,26 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="">Stefacoin</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item" *ngIf="usuario?.tipo === 1">
-          <a class="nav-link active" aria-current="page" href="#">Area do Professor</a>
+          <a class="nav-link active" aria-current="page" href="/listar-professor">Area do Professor</a>            
+        </li>
+        <li class="nav-item" *ngIf="usuario?.tipo === 1">
+          <a class="nav-link active" aria-current="page" href="/listar-cursos">Cursos</a>            
         </li>
         <li class="nav-item" *ngIf="usuario?.tipo === 2">
-          <a class="nav-link" href="#">Area do Aluno</a>
+          <a class="nav-link" href="/listar-aluno">Area do Aluno</a>
+        </li>
+        <li class="nav-item" *ngIf="usuario?.tipo === 2">
+          <!-- <a class="nav-link active" aria-current="page" href="/listar-aluno">Area do Aluno</a>             -->
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <button type="button" class="btn btn-danger" (click)="logout()">Deslogar</button>
         </li>
       </ul>
     </div>
   </div>
-</nav>
+</nav> 
+
