--- a/src/app/pages/public/cadastro/cadastro.component.html
+++ b/src/app/pages/public/cadastro/cadastro.component.html
@@ -1,1 +1,51 @@
-<p>cadastro works!</p>
+<div class="box">
+  <form [formGroup]="cadastroForm" (ngSubmit)="cadastrar()">
+    <div ng-controller="MainCtrl" style="margin-left: 50px;">   
+      <input type="checkbox" name="checkbox" [checked]="currentlyChecked === check_box_type.Aluno" (click)="selectCheckBox(check_box_type.Aluno)"> Aluno  
+      <input type="checkbox" name="checkbox" [checked]="currentlyChecked === check_box_type.Professor" (click)="selectCheckBox(check_box_type.Professor)"> Professor
+    </div>
+
+    <div style="margin-top: 20px" *ngIf="currentlyChecked === 0">
+      <div class="form-group">
+        <label for="nome">Nome</label>
+        <input formControlName="nome" type="text" class="form-control" id="name">
+      </div>
+      <div class="form-group">
+        <label for="nome">Formação</label>
+        <input formControlName="formacao" type="text" class="form-control" id="formacao">
+      </div>
+      <div class="form-group">
+        <label for="nome">Idade</label>
+        <input formControlName="idade" type="text" class="form-control" id="idade">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email</label>
+        <input formControlName="email" type="email" class="form-control" id="email" aria-describedby="emailHelp">
+      </div>
+      <div class="form-group">
+        <label for="senha">Senha</label>
+        <input formControlName="senha" type="password" class="form-control" id="senha">
+      </div>
+      <button style="margin-left: 30px;" type="submit" class="btn btn-primary">Enviar</button>
+      <button style="margin-left: 20px;" [routerLink]="['/login']" type="submit" class="btn btn-primary">Voltar</button>
+    </div>
+
+    <div style="margin-top: 20px" *ngIf="currentlyChecked === 1">
+      <div class="form-group">
+        <label for="nome">Nome</label>
+        <input formControlName="nome" type="text" class="form-control" id="name" aria-describedby="emailHelp">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input formControlName="email" type="email" class="form-control" id="email" aria-describedby="emailHelp">
+      </div>
+      <div class="form-group">
+        <label for="senha">Senha</label>
+        <input formControlName="senha" type="password" class="form-control" id="senha">
+      </div>
+      <button style="margin-left: 30px;" type="submit" class="btn btn-primary">Enviar</button>
+      <button style="margin-left: 20px;" [routerLink]="['/login']" type="submit" class="btn btn-primary">Voltar</button>
+    </div>
+  </form>
+  
+</div>
